fixed some css spacing and list order with column reverse

--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,10 @@ img {
 
 #event-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    margin-left: 115px;
     padding: 10px;
+    gap: 5px;
     background-color: #f8f2f7;
 }
 
